# onitama-tb2

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/: copilot-instructions.md
src/: board.cpp  board.h  card.cpp  card.hpp  index.hpp  tablebase.h  types.h
tb/: BUILD.bazel  board.cpp  board.h  board.hpp  card.h  card.hpp  generate.cpp  generate.h  helper.h  index.cpp  index.hpp  main.cpp  math.h  move.h  movegen.hpp  pdep.hpp  permutation.h  rank.hpp  table.h  tablebase.h  types.h
tb/src/: game.h  index.hpp  main.cpp
